Homework for HTML

--- a/vswindspeed.html
+++ b/vswindspeed.html
@@ -51,9 +51,9 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8">
-                <h3>Summary: Latitude vs. X</h3>
+                <h3>Vs. Windspeed</h3>
               
-                <img class="float-left" src="/HW/Instructions/Resources/assets/images/Fig1.png" alt="Graph 1" class="pr-3"height="200px" width="200px">
+                <img class="float-left" src="/HW/Instructions/Resources/assets/images/Fig4.png" alt="Vs. Windspeed" class="pr-3">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia in expedita ullam accusamus,
                     asperiores pariatur blanditiis nisi assumenda sint voluptas cumque, consequatur perferendis sapiente
                     voluptate, unde ipsa quo similique nesciunt.</p>
