--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="col">
-            <a class="navbar-brand" href="/HW/Instructions/hw_starter.html">Latitude</a>
+            <a class="navbar-brand" href="/index.html">Latitude</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -31,17 +31,18 @@
                         Plots
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="/HW/Instructions/vsmaxtemp.html">Vs. Max Temperature</a>
-                        <a class="dropdown-item" href="/HW/Instructions/vshumidity.html">Vs. Humidity</a>
-                        <a class="dropdown-item" href="/HW/Instructions/vscloudiness.html">Vs. Cloudiness</a>
-                        <a class="dropdown-item" href="/HW/Instructions/vswindspeed.html">Vs. Windspeed</a>
+                        <a class="dropdown-item" href="/vsmaxtemp.html">Vs. Max Temperature</a>
+                        <a class="dropdown-item" href="/vshumidity.html">Vs. Humidity</a>
+                        <a class="dropdown-item" href="/vscloudiness.html">Vs. Cloudiness</a>
+                        <a class="dropdown-item" href="/vswindspeed.html">Vs. Windspeed</a>
                     </div>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/HW/Instructions/comparison.html">Comparison <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/comparison.html">Comparison <span
+                            class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/HW/Instructions/data.html">Data</a>
+                    <a class="nav-link" href="/data.html">Data</a>
                 </li>
 
             </ul>
