--- a/vswindspeed.html
+++ b/vswindspeed.html
@@ -54,7 +54,7 @@
             <div class="col-lg-8">
                 <h3>Vs. Windspeed</h3>
               
-                <img class="float-left" src="/HW/Instructions/Resources/assets/images/Fig4.png" alt="Vs. Windspeed" class="pr-3">
+                <img class="float-left" src="/images/Fig4.png" alt="Vs. Windspeed" class="pr-3">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia in expedita ullam accusamus,
                     asperiores pariatur blanditiis nisi assumenda sint voluptas cumque, consequatur perferendis sapiente
                     voluptate, unde ipsa quo similique nesciunt.</p>
@@ -71,12 +71,12 @@
             <div class="col-lg-4">
                     <h4>Visualizations</h4>
                     <div class="row">
-                        <div class="col"><a href="vsmaxtemp.html"><img src="/hw/Instructions/Resources/assets/images/Fig1.png" alt="Vs. Max Temperature" height="150px" width="150px"></a></div>
-                        <div class="col"><a href="vshumidity.html"><img src="/hw/Instructions/Resources/assets/images/Fig2.png" alt="Vs. Humidity" height="150px" width="150px"></a></div>
+                        <div class="col"><a href="vsmaxtemp.html"><img src="/images/Fig1.png" alt="Vs. Max Temperature" height="150px" width="150px"></a></div>
+                        <div class="col"><a href="vshumidity.html"><img src="/images/Fig2.png" alt="Vs. Humidity" height="150px" width="150px"></a></div>
                     </div>
                     <div class="row pt-2">
-                        <div class="col"><a href="vscloudiness.html"><img src="/hw/Instructions//Resources//assets//images/Fig3.png" alt="Vs. Cloudiness" height="150px" width="150px"></a></div>
-                        <div class="col"><a href="vswindspeed.html"><img src="/hw/Instructions/Resources//assets/images/Fig4.png" alt="Vs. Windspeed" height="150px" width="150px"></a></div>
+                        <div class="col"><a href="vscloudiness.html"><img src="/images/Fig3.png" alt="Vs. Cloudiness" height="150px" width="150px"></a></div>
+                        <div class="col"><a href="vswindspeed.html"><img src="/images/Fig4.png" alt="Vs. Windspeed" height="150px" width="150px"></a></div>
                     </div>
                 </div>
         </div>
