--- a/comparison.html
+++ b/comparison.html
@@ -57,18 +57,18 @@
                         <h4>Click any image to see more detail.</h4>
                         <div class="row">
                             <div class="col"><a href="vsmaxtemp.html"><img
-                                        src="/hw/Instructions/Resources/assets/images/Fig1.png" alt="Vs. Max Temperature"
+                                        src="/images/Fig1.png" alt="Vs. Max Temperature"
                                         height="450px" width="450px"></a></div>
                             <div class="col"><a href="vshumidity.html"><img
-                                        src="/hw/Instructions/Resources/assets/images/Fig2.png" alt="Vs. Humidity"
+                                        src="/images/Fig2.png" alt="Vs. Humidity"
                                         height="450px" width="450px"></a></div>
                         </div>
                         <div class="row pt-2">
                             <div class="col"><a href="vscloudiness.html"><img
-                                        src="/hw/Instructions//Resources//assets//images/Fig3.png" alt="Vs. Cloudiness"
+                                        src="/images/Fig3.png" alt="Vs. Cloudiness"
                                         height="450px" width="450px"></a></div>
                             <div class="col"><a href="vswindspeed.html"><img
-                                        src="/hw/Instructions/Resources//assets/images/Fig4.png" alt="Vs. Windspeed"
+                                        src="/images/Fig4.png" alt="Vs. Windspeed"
                                         height="450px" width="450px"></a></div>
                         </div>
                     </div>
